# rusting

./: Cargo.toml  shell.nix
src/: complex.rs  grad.py  main.rs
