[package]
name = "rusting"
version = "0.1.0"
authors = ["MDeiml <matthias@deiml.net>", "Anton Lydike <me@antonlydike.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
png        = "0.16.8"
rayon      = "1.5.1"
hsl        = "0.1.1"