[package]
name = "rusting"
version = "0.1.0"
authors = ["MDeiml <matthias@deiml.net>", "Anton Lydike <me@antonlydike.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.8.1"
winit = "0.24.0"
env_logger = "0.8.3"
futures = "0.3.15"
